  leave primer region unmodified.
+ Fixed a bug in the output logging
+ Fixed a bug with lowercase sequence data

ParseHeaders:
+ Added count of sequences without any valid fields (FAIL) to console output

ParseLog:
+ Added count of records without any valid fields (FAIL) to console output

SplitSeq:
+ Fixed bug in console output of samplepair subcommand

-------------------------------------------------------------------------------
September 30, 2013
Version 0.4.0

Minor name changes were made to multiple scripts, functions, parameters,
  and output files

AlignSets, AssemblePairs, BuildConsensus, EstimateError, FilterSeq, and 
  MaskPrimers are now multithreaded.  The number of simultaneous processes
  may be specified using '--nproc (value)'. Note this means file ordering
  is no longer preserved between the input and output sequence files.

Performance improvements were made to several tools.

The universal '--verbose' parameter was replaced with '--log (file name)'
  which specifies a log file for verbose output, and disables verbose logging
  if not specified.  

The report of input parameters and sequence counts is now separate from the log
  and is always printed to standard output.

Added a progress bar to the standard output of most tools.
  
Added a universal '--outname (file prefix)' parameter which changes the leading
  portion of the output file name.  If not specified, the current file name 
  is used (excluding the file extension, as per the previous behavior).

Added a universal '--clean' parameter which if specified forces the tool not to
  create an output file of sequences which failed processing.
  
IgCore:
+ Changes to parameters and internals of multiple functions
+ Added functions to support multithreading for single-end reads, paired-end 
  reads, and barcode sets
+ Added safe annotation field renaming
+ Added progress bar, logging and output file name conversion support